--- a/short_talk/safs_aul_talk.Rmd
+++ b/short_talk/safs_aul_talk.Rmd
@@ -56,20 +56,6 @@ _School of Aquatic and Fishery Sciences<br>University of Washington<br>_
 
 ---
 
-class: frimg
-
-background-image: url(figs/minnesota.jpg)
-background-size: 70%
-
----
-
-class: frimg
-
-background-image: url(figs/wisconsin.jpg)
-background-size: 75%
-
----
-
 class: frimgB, center
 
 # I was trained as a field ecologist
@@ -92,39 +78,28 @@ class: frimgB, center
 
 ---
 
-class: center, middle, inverse
+class: middle, inverse
+# How do natural & human forces affect
 
-# Many scientific advances
+# .center[ the structure of aquatic ecosystems & ]
 
----
-
-class: frimg
-
-background-image: url(figs/remote_sensing.jpg)
-background-position: 50% 50%
-background-size: 100%
-
-# Remote sensing
+# .right[ the services we derive from them? ]
 
 ---
 
-class: frimg, center
+class: middle
 
-background-image: url(figs/dna.png)
-background-position: 50% 50%
-background-size: 100%
+> # We love to forecast, but we're not very good at it.
 
-# Genetics
+.right[
+## - Nate Silver .wh-text["----"]
+]
 
 ---
 
-class: frimg, right
+class: inverse, middle, center
 
-background-image: url(figs/stats.png)
-background-position: 50% 30%
-background-size: 90%
-
-# Analysis
+# The signal and the noise
 
 ---
 
@@ -142,128 +117,9 @@ background-size: 90%
 
 ---
 
-class: middle, inverse
-# How do natural & human forces affect
-
-# .center[ the structure of aquatic ecosystems & ]
-
-# .right[ the services we derive from them? ]
-
----
-
-# The forces may be
-
-## .green-text[
-biological (food web interactions, harvest)
-]
-## .blue-text[
-physical (climate, habitat modification)
-]
-## .orange-text[
-chemical (ocean acidification, contaminants)
-]
-
----
-
-# The services can be
-
-## .green-text[
-provisioning (food production)
-]
-## .blue-text[
-supporting (nutrient cycling)
-]
-## .orange-text[
-regulating (flood control)
-]
-## .purple-text[
-cultural (spiritual benefits)
-]
-
----
-
-class: middle
-
-> # We love to forecast, but we're not very good at it.
-
-.right[
-## - Nate Silver .wh-text["-----"]
-]
----
-
-class: inverse, middle, center
-
-# The signal and the noise
-
----
-
-class: center
-
-# *Methods in Ecology and Evolution*
-
-```{r timeseries, dpi=300, fig.height=4, fig.width=6, out.height="80%", out.width="80%", fig.align='center', echo=FALSE}
-mee <- data.frame(yr=seq(2010,2017),
-                  issues=c(4,6,6,12,12,12,12,12),
-                  imp=c(NA,5.1,6,6.6,7.4,8.1,8.6,9.9))
-
-pd <- as.matrix(mee[,-1])
-
-par(mfrow=c(2,1), mai=c(0.3,0.4,0.3,0), omi=c(0.1,0,0,0))
-## top panel
-bp <- barplot(height=rep(NA,8), las=1, ylim=c(0,13),
-              col="#488fdf", border=NA, space=1,
-              ylab="",
-              cex.lab=1.4, yaxt="n")
-abline(h=seq(0,12,3), col="gray")
-text(0, 1.15*par()$usr[4], cex=1.4,
-     "Issues per year", xpd=NA, pos=4)
-barplot(height=mee$issues, las=1, add=TRUE,
-        col="#488fdf", border=NA, space=1,
-        ylab="Issues per year",
-        cex.lab=1.4, yaxt="n")
-axis(2, at=seq(0,12,3), las=1, tick=FALSE, cex.axis=1.2)
-## bottom panel
-barplot(height=rep(NA,8), las=1,
-        col="darkblue", border=NA, space=1,
-        ylim=c(0,11),
-        ylab="", cex.lab=1.4, yaxt="n")
-abline(h=seq(0,10,2), col="gray")
-text(0, 1.15*par()$usr[4], cex=1.4,
-     "Impact factor", xpd=NA, pos=4)
-barplot(height=mee$imp, las=1, names.arg=mee$yr, add=TRUE,
-        col="#ff8100", space=1, border=NA,
-        cex.names=1.2,
-        ylab="", cex.lab=1.4, yaxt="n")
-axis(2, at=seq(0,10,2), las=1, tick=FALSE, cex.axis=1.2)
-text(bp[1],1,"NA",col="darkgray", adj=c(0.5,0.5))
-```
-
----
-
 class: center, middle, inverse
 
 # Lots of focus on *hierarchical models*
-
----
-
-class: frimg, center
-background-image: url(figs/horrified.jpg)
-background-size: cover
-
----
-
-# Hi·er·ar·chi·cal
-
-### *adjective*
-
-1. ## Arranged in an order
-
----
-
-class: center, middle, inverse
-
-# A hierarchical model is simply
-# a model within a model
 
 ---
 
@@ -537,352 +393,6 @@ background-size: cover
 
 ---
 
-.center[
-# Emergence of high-dimension data
-]
-
-.green-text[
-## Remote sensing
-]
-.blue-text.center[
-## Citizen science
-]
-.orange-text.right[
-## Large-scale surveys
-]
-
----
-
-.center[
-# Emergence of high-dimension data
-]
-
-.green-text[
-## Remote sensing
-]
-.blue-text.center[
-## Citizen science
-]
-.orange-text.right[
-## Large-scale surveys
-]
-
-.center[
-# How can we make sense of all of this?
-]
-
----
-
-class: frimg, inverse, right
-background-image: url(figs/shake.jpg)
-background-position: 50% 50%
-background-size: 100%
-
-.white-text[
-# Classification
-
-<br><br>
-
-## .right[ History ]
-
-## .left[ Tragedy ]
-
-<br><br>
-
-## .center[ Comedy ]  
-]
-
----
-
-class: center
-
-# Ordination
-
-```{r pca_ex, warning=FALSE, message=FALSE, echo=FALSE, dpi=300, fig.height=5, fig.width=10, fig.align='center', out.height="100%", out.width="100%"}
-set.seed(123)
-
-par(mfrow=c(1,2), mai=c(0.7,0.7,0.3,0.3), omi=rep(0,4), lwd=2, fg="black")
-
-## PCA
-biplot(prcomp(rock[,c(1,2,4)]), col=c("black", "darkorange"),
-       yaxt="n", xaxt="n", ylab="", xlab="")
-mtext(side=1, expression(PC[1]), cex=1.5, line=1)
-mtext(side=2, expression(PC[2]), cex=1.5, line=1)
-mtext(side=3, "PCA", cex=2, line=0)
-
-## NMDS
-comm_mat <- matrix(
-   sample(1:100,300,replace=T),nrow=6,
-   dimnames=list(paste("community",1:6,sep="_"),paste0("sp",1:50)))
-
-nmds <- vegan::metaMDS(comm_mat, k=3, trymax=100, trace=0)
-
-vegan::ordiplot(nmds, type="n",
-                yaxt="n", xaxt="n", ylab="", xlab="")
-vegan::orditorp(nmds, display="species", col="dodgerblue", air=0.01)                     
-vegan::orditorp(nmds, display="sites", cex=1.25, col="darkorange", air=0.01)                     
-mtext(side=1, expression(NMDS[1]), cex=1.5, line=1)
-mtext(side=2, expression(NMDS[2]), cex=1.5, line=1)
-mtext(side=3, "NMDS", cex=2, line=0)
-```
-
----
-
-```{r plot_many_ts, echo=FALSE, dpi=300, fig.height=5.5, fig.width=7, fig.align='center'}
-NN <- 25
-TT <- 30
-MM <- 3
- 
-set.seed(123)
-## MM x TT matrix of innovations
-ww <- matrix(rnorm(MM*TT, 0, 1), MM, TT)
-ww[,1] <- rnorm(MM, 0, sqrt(5))
-## MM x TT matrix of scaled latent trends
-xx <- t(scale(apply(ww,1,cumsum)))
-
-## loadings matrix
-ZZ <- matrix(runif(NN*MM, -1, 1), NN, MM)
-diag(ZZ) <- rev(sort(abs(diag(ZZ))))
-ZZ[upper.tri(ZZ)] <- 0
-ZZ <- round(ZZ, 2)
-
-## obs var
-obs_var <- 0.2^2
-## obs errors
-ee <- t(MASS::mvrnorm(TT, matrix(0,NN,1), diag(obs_var,NN,NN)))
-## NN x TT matrix of observed data
-yy <- ZZ %*% xx + ee
-
-clr <- viridis::plasma(NN, alpha=0.7, end=0.8)
-
-vv <- sample(seq(NN), NN)
-
-par(mfrow=c(5,5), mai=c(0.1,0.1,0,0), omi=c(0,0,0,0)) 
-
-for(i in 1:NN) {
-	plot.ts(yy[vv[i],], lwd=2,
-	        xlab="", xaxt="n", ylab="", yaxt="n",
-	        col=clr[i], bty="n")
-}
-```
-
----
-
-class: center
-
-# Just some combination of these
-
-```{r plot_dfa_trends, echo=FALSE, fig.align="center", dpi=300, fig.height=3, fig.width=8}
-## plot the trends
-par(mfrow=c(1,3), mai=c(0.2,0,0,0), omi=rep(0.1,4))
-clr <- viridis::plasma(MM, end=0.8)
-for(i in 1:3) {
-	plot.ts(xx[i,], lwd=3,
-	        xlab="", xaxt="n", ylab="", yaxt="n",
-	        col=clr[i], bty="n")
-}
-```
-
----
-
-# Dynamic Factor Analysis
-
-## .blue-text.under[State model]
-
-## .blue-text[Trends]<sub><i>t</i></sub> = .blue-text[Trends]<sub><i>t</i>-1</sub> + .gray-text[error]<sub><i>t</i></sub>
-
----
-
-# Dynamic Factor Analysis
-
-## .blue-text.under[State model]
-
-## .blue-text[Trends]<sub><i>t</i></sub> = .blue-text[Trends]<sub><i>t</i>-1</sub> + .gray-text[error]<sub><i>t</i></sub>
-
-## .purple-text.under[Observation model]
-
-## .purple-text[Data]<sub><i>t</i></sub> = .orange-text[Loadings] × .blue-text[Trends]<sub><i>t</i></sub> + .red-text[error]<sub><i>t</i></sub>
-
-.citationT.gray-text[Zuur et al. (2003) *Environmetrics* 14:665–685] 
-
----
-
-# Salmon returns & productivity
-
-.blue-text.right[
-## Trying to understand when & where stocks covary
-]
-
-.gray-text.right[
-### Mantua et al. (1997)
-
-### Mueter et al. (2005)
-
-### Stachura et al. (2014)
-]
-
----
-
-class: black-back 
-background-image: url(figs/aykssi.png)
-background-position: 50% 50%
-background-size: 63%
-
----
-
-# Are there common patterns over time?
-
-.blue-text.right[
-## Ex: Alaskan Chinook salmon (15 popns, 25+ years)
-]
-
----
-
-class: frimg
-background-image: url(figs/dfa_1.png)
-background-position: 50% 40%
-background-size: 75%
-
----
-
-class: frimg
-background-image: url(figs/dfa_2.png)
-background-position: 50% 70%
-background-size: 80%
-
-# Two declining trends
-
-.citationT.gray-text[Ohlberger et al. (2016) *Ecosphere* 7:e01333]
-
----
-
-class: frimg, center
-background-image: url(figs/dfa_npgo.png)
-background-position: 35% 60%
-background-size: 70%
-
-# Ocean is part of the story
-
-.citationT.gray-text[Ohlberger et al. (2016) *Ecosphere* 7:e01333]
-
----
-
-class: frimg
-background-image: url(figs/dfa_region.png)
-background-position: 50% 35%
-background-size: 65%
-
-.citationT.gray-text[Ohlberger et al. (2016) *Ecosphere* 7:e01333]
-
----
-
-class: frimg
-background-image: url(figs/dfa_covar.png)
-background-position: 50% 40%
-background-size: 65%
-
-.citationT.gray-text[Ohlberger et al. (2016) *Ecosphere* 7:e01333]
-
----
-
-class: frimg, center
-background-image: url(figs/dfa_fore_err.png)
-background-position: 45% 60%
-background-size: 50%
-
-# Environmental effects improve forecasts
-
-.citationT.gray-text[Ohlberger et al. (2016) *Ecosphere* 7:e01333]
-
----
-
-class: inverse, middle, center
-
-# Space. The final frontier...
-
----
-
-class: black-back
-background-image: url(figs/wcgfs.jpg)
-background-position: 50% 50%
-background-size: 97%
-
----
-
-# Are there common patterns over space?
-
-.right.blue-text[
-## Ex: California Current rockfish (20 spp, 10 years)
-]
-
----
-
-# Spatial Factor Analysis
-
-## .blue-text.under[State model]
-
-## .blue-text[Spatial maps]<sub><i>i</i></sub>
-
-## .purple-text.under[Observation model]
-
-## .purple-text[Data]<sub><i>i</i></sub> = .orange-text[Loadings] × .blue-text[Spatial maps]<sub><i>i</i></sub> + .red-text[error]<sub><i>i</i></sub>
-
-.citationT.gray-text[Thorson et al. (2015) *Meth* *Ecol* & *Evol* 6:627–637]
-
----
-
-class: frimg
-background-image: url(figs/sfa_1.png)
-background-position: 50% 30%
-background-size: 65%
-
-.citationT.gray-text[Thorson et al. (2015) *Meth* *Ecol* & *Evol* 6:627–637]
-
----
-
-class: frimg
-background-image: url(figs/sfa_2.png)
-background-position: 50% 30%
-background-size: 75%
-
-.citationT.gray-text[Thorson et al. (2015) *Meth* *Ecol* & *Evol* 6:627–637]
-
----
-
-class: center, bottom, black-back
-background-image: url(figs/robin.jpg)
-background-position: 50% 50%
-background-size: 75%
-
-.white-text[
-# Robin Hood Effect
-]
-
----
-
-# How do spatial patterns change over time?
-
-.right.blue-text[
-## Ex: Bering Sea groundfishes (10 spp, 30+ years)
-]
-
----
-
-class: frimg
-background-image: url(figs/sdfa.png)
-background-position: 50% 25%
-background-size: 65%
-
-.citationT.gray-text[Thorson et al. (2016) *Global* *Ecol* & *Biogeogr* 6:627–637]
-
----
-
-class: inverse, middle, center
-
-# Shifting southward
-
----
-
 # Conservation of Pacific salmon
 
 .blue-text[
@@ -980,125 +490,6 @@ background-size: 77%
 
 ---
 
-class: inverse, center, middle
-
-# We need a hierarchical model!
-
----
-
-class: inverse, center, middle
-
-# But first, a word from our sponsor...
-
----
-
-class: frimg, right, middle
-background-image: url(figs/prodbox.jpg)
-background-position: 5% 50%
-background-size: 60%
-
-# This Product™
-
-### Now with a plain gray box!
-
----
-
-# Sales of .blue-text[This Product] over time
-
-```{r sale_ts_1, echo=FALSE, dpi=300, fig.height=4.5, fig.width=8, out.height="100%", out.width="100%", fig.align='center'}
-tstar <- 9
-tt <- 20
-
-par(mai=c(0.9,0.9,0.1,0.1), omi=c(0,0,0,0))
-
-set.seed(666)
-
-x1 <- cumsum(rnorm(tt)) + 5
-
-dd <- c(rep(0,tstar), rep(1.5,20-tstar))
-x2 <- x1 + dd
-
-plot(seq(tt), x1, type="n", pch=16, las=1, 
-        xlab="", ylab="", cex.axis=1.5)
-mtext(side=1, "Time", line=3.5, cex=1.8)
-mtext(side=2, "Sales index", line=3, cex=1.8)
-
-lines(seq(tt), x2, type="o", pch=16, cex=1.2, las=1, col="dodgerblue", lwd=2)
-```
-
----
-
-# The company began advertising at .orange-text[Time = 9]
-
-```{r sale_ts_2, echo=FALSE, dpi=300, fig.height=4.5, fig.width=8, out.height="100%", out.width="100%", fig.align='center'}
-par(mai=c(0.9,0.9,0.1,0.1), omi=c(0,0,0,0))
-
-plot(seq(tt), x1, type="n", pch=16, las=1, 
-        xlab="", ylab="", cex.axis=1.5)
-mtext(side=1, "Time", line=3.5, cex=1.8)
-mtext(side=2, "Sales index", line=3, cex=1.8)
-
-lines(seq(tt), x2, type="o", pch=16, cex=1.2, las=1, col="dodgerblue", lwd=2)
-
-scl <- 0.07
-aB <- (par()$usr[4] - par()$usr[3])*scl
-arrows(x0=tstar,y0=par()$usr[3]-aB,y1=par()$usr[3]*0.99,
-       length=0.1, col="darkorange", xpd=TRUE, lwd=2)
-text(tstar,par()$usr[3]-aB, "T",
-	 cex=2, col="darkorange", pos=1, xpd=TRUE)
-```
-
----
-
-# How much did .orange-text[advertising] increase sales?
-
-```{r sale_ts_3, echo=FALSE, dpi=300, fig.height=4.5, fig.width=8, out.height="100%", out.width="100%", fig.align='center'}
-par(mai=c(0.9,0.9,0.1,0.1), omi=c(0,0,0,0))
-
-plot(seq(tt), x1, type="n", pch=16, las=1, 
-        xlab="", ylab="", cex.axis=1.5)
-mtext(side=1, "Time", line=3.5, cex=1.8)
-mtext(side=2, "Sales index", line=3, cex=1.8)
-
-lines(seq(tt), x1, type="o", pch=16, cex=1.2, las=1, col="darkgray", lwd=2)
-
-lines(seq(tt), x2, type="o", pch=16, cex=1.2, las=1, col="dodgerblue", lwd=2)
-
-arrows(tstar+1, x1[tstar+1]*1.02, tstar+1, x2[tstar+1]*0.982,
-       length=0.1, col="darkorange", lty="solid", lwd=3)
-text(tstar+1.75, (x1[tstar+1]+x2[tstar+1])/2, "A",
-	 cex=2, col="darkorange", adj=c(0.5,0.5))
-
-scl <- 0.07
-aB <- (par()$usr[4] - par()$usr[3])*scl
-arrows(x0=tstar,y0=par()$usr[3]-aB,y1=par()$usr[3]*0.99,
-       length=0.1, col="darkgray", xpd=TRUE, lwd=2)
-text(tstar,par()$usr[3]-aB, "T",
-	 cex=2, col="darkgray", pos=1, xpd=TRUE)
-```
-
----
-
-# A model from advertising
-
-## .blue-text.under[State model]
-
-## .blue-text[Sales]<sub><i>t</i></sub> = .blue-text[Sales]<sub><i>t</i>-1</sub> + .orange-text[Advertising × I]<sub><i>t</i></sub> + .gray-text[error]<sub><i>t</i></sub>
-
----
-
-# A model from advertising
-
-## .blue-text.under[State model]
-
-## .blue-text[Sales]<sub><i>t</i></sub> = .blue-text[Sales]<sub><i>t</i>-1</sub> + .orange-text[Advertising × I]<sub><i>t</i></sub> + .gray-text[error]<sub><i>t</i></sub>
-
-## .purple-text.under[Observation model]
-
-## .purple-text[Data]<sub><i>t</i></sub> = .blue-text[Sales]<sub><i>t</i></sub> + .red-text[error]<sub><i>t</i></sub>
-
----
-
 # Our model for supplementation
 
 ## .blue-text.under[State model]
@@ -1149,123 +540,6 @@ background-size: 85%
 ## Common year effects overshadow .orange-text[intervention]
 
 .citationT.gray-text[Scheuerell et al. (2015) *Ecol* & *Evol* &nbsp; 5:2115–2125]
-
----
-
-class: frimg
-background-image: url(figs/dwh.jpg)
-background-position: 50% 50%
-background-size: 100%
-
-# .white-text[ Deepwater Horizon oil spill ]
-
-.citation.white-text[ 20 April 2010 ]
-
----
-
-# How did abundance change post-spill?
-
-.blue-text.right[
-## Quarterly survey data from 1982-present
-
-## 50+ species of fish & inverts
-]
-
----
-
-class: black-back
-background-image: url(figs/seamap_zones.jpeg)
-background-position: 50% 50%
-background-size: 95%
-
-# Spatial mgmt zones
-
----
-
-class: frimg, middle
-background-image: url(figs/dwh_effect.png)
-background-position: 80% 50%
-background-size: 55%
-
-.footnoteSm.gray-text[Scheuerell et al. _in prep_]
-
----
-
-class: frimg, middle
-background-image: url(figs/dwh_effect.png)
-background-position: 80% 50%
-background-size: 55%
-
-## .red-text[ Oil spill (-) ]
-
-## .blue-text[ No Fishing (+) ]
-
-.footnoteSm.gray-text[Scheuerell et al. _in prep_]
-
----
-
-class: frimg, middle
-background-image: url(figs/dwh_effect.png)
-background-position: 80% 50%
-background-size: 55%
-
-## .orange-text[ Only 3 yrs later ]
-
-.footnoteSm.gray-text[Scheuerell et al. _in prep_]
-
----
-
-class: inverse, center, middle
-
-# Future directions
-
----
-
-# Marine & freshwater food-webs
-
-.blue-text.right[
-## How do species interactions change over time?
-]
-
----
-
-class: frimg
-background-image: url(figs/san_nic.png)
-background-position: 50% 70%
-background-size: 90%
-
-# Kelp forest food webs
-
----
-
-# Ecological portfolios
-
-.blue-text.right[
-## How do risks vs rewards change over time?
-]
-
----
-
-class: frimg
-background-image: url(figs/capm.png)
-background-position: 50% 80%
-background-size: 70%
-
-# Risk vs returns of assets
-
----
-
-# In summary
-
-.blue-text[
-## Much of our data is "noisy"
-
-## Identifying signals in the noise can be challenging
-
-## Hierarchical models offer great promise,
-
-## .right[ but they are _not_ a panacea ]
-]
 
 ---
 
