--- a/seminars/safs_aul_seminar.Rmd
+++ b/seminars/safs_aul_seminar.Rmd
@@ -980,34 +980,22 @@ background-size: 77%
 
 class: inverse, center, middle
 
-# We need a hierarchical model!
+# How should we analyze these data?
 
 ---
 
-class: inverse, center, middle
+class: frimgB, black-back, center
+background-image: url(figs/budweiser.jpg)
+background-size: contain
 
-# But first, a word from our sponsor...
-
----
-
-class: frimg, right, middle
-background-image: url(figs/prodbox.jpg)
-background-position: 5% 50%
-background-size: 60%
-
-# This Product™
-
-### Now with a plain gray box!
 
 ---
 
-# Sales of .blue-text[This Product] over time
+# The company began advertising at .orange-text[Time = 9]
 
-```{r sale_ts_1, echo=FALSE, dpi=300, fig.height=4.5, fig.width=8, out.height="100%", out.width="100%", fig.align='center'}
+```{r sale_ts_2, echo=FALSE, dpi=300, fig.height=4.5, fig.width=8, out.height="100%", out.width="100%", fig.align='center'}
 tstar <- 9
 tt <- 20
-
-par(mai=c(0.9,0.9,0.1,0.1), omi=c(0,0,0,0))
 
 set.seed(666)
 
@@ -1016,19 +1004,6 @@ x1 <- cumsum(rnorm(tt)) + 5
 dd <- c(rep(0,tstar), rep(1.5,20-tstar))
 x2 <- x1 + dd
 
-plot(seq(tt), x1, type="n", pch=16, las=1, 
-        xlab="", ylab="", cex.axis=1.5)
-mtext(side=1, "Time", line=3.5, cex=1.8)
-mtext(side=2, "Sales index", line=3, cex=1.8)
-
-lines(seq(tt), x2, type="o", pch=16, cex=1.2, las=1, col="dodgerblue", lwd=2)
-```
-
----
-
-# The company began advertising at .orange-text[Time = 9]
-
-```{r sale_ts_2, echo=FALSE, dpi=300, fig.height=4.5, fig.width=8, out.height="100%", out.width="100%", fig.align='center'}
 par(mai=c(0.9,0.9,0.1,0.1), omi=c(0,0,0,0))
 
 plot(seq(tt), x1, type="n", pch=16, las=1, 
@@ -1081,7 +1056,7 @@ text(tstar,par()$usr[3]-aB, "T",
 
 ## .blue-text.under[State model]
 
-## .blue-text[Sales]<sub><i>t</i></sub> = .blue-text[Sales]<sub><i>t</i>-1</sub> + .orange-text[Advertising × I]<sub><i>t</i></sub> + .gray-text[error]<sub><i>t</i></sub>
+## .blue-text[Sales]<sub><i>t</i></sub> = .blue-text[Sales]<sub><i>t</i>-1</sub> + .orange-text[Advertising]<sub><i>t</i></sub> + .gray-text[error]<sub><i>t</i></sub>
 
 ---
 
@@ -1089,7 +1064,7 @@ text(tstar,par()$usr[3]-aB, "T",
 
 ## .blue-text.under[State model]
 
-## .blue-text[Sales]<sub><i>t</i></sub> = .blue-text[Sales]<sub><i>t</i>-1</sub> + .orange-text[Advertising × I]<sub><i>t</i></sub> + .gray-text[error]<sub><i>t</i></sub>
+## .blue-text[Sales]<sub><i>t</i></sub> = .blue-text[Sales]<sub><i>t</i>-1</sub> + .orange-text[Advertising]<sub><i>t</i></sub> + .gray-text[error]<sub><i>t</i></sub>
 
 ## .purple-text.under[Observation model]
 
@@ -1101,7 +1076,7 @@ text(tstar,par()$usr[3]-aB, "T",
 
 ## .blue-text.under[State model]
 
-## .blue-text[Density]<sub><i>t</i></sub> = .blue-text[Density]<sub><i>t</i>-1</sub> + .orange-text[Supplementation × I]<sub><i>t</i></sub> + .gray-text[error]<sub><i>t</i></sub>
+## .blue-text[Density]<sub><i>t</i></sub> = .blue-text[Density]<sub><i>t</i>-1</sub> + .orange-text[Supplementation]<sub><i>t</i></sub> + .gray-text[error]<sub><i>t</i></sub>
 
 ## .purple-text.under[Observation model]
 
@@ -1147,6 +1122,13 @@ background-size: 85%
 ## Common year effects overshadow .orange-text[intervention]
 
 .citationT.gray-text[Scheuerell et al. (2015) *Ecol* & *Evol* &nbsp; 5:2115–2125]
+
+
+---
+
+class: inverse, center, middle
+
+# What about unplanned experiments?
 
 
 ---
@@ -1278,7 +1260,7 @@ background-size: 70%
 
 # Development
 
-.blue-text[https://github.com/mdscheuerell/]
+## .blue-text[https://github.com/mdscheuerell/]
 
 ---
 
@@ -1298,6 +1280,7 @@ Carnival: *Frank Kovalchek (2010)*
 Snake oil: *The Register*  
 Shakespeare's plays: *Sir John Gilbert (1849)*  
 Robin Hood: *John Escott*  
+Budweiser: *Anheiser-Busch*  
 DWH: *US Coast Guard*  
 ]
 
