--- a/seminars/safs_aul_seminar.Rmd
+++ b/seminars/safs_aul_seminar.Rmd
@@ -522,7 +522,7 @@ background-size: 40%
 
 # Advantages of hierarchical models
 
-## 4. Data-poor benefit from data-rich
+## 4. .gray-text[Data-poor] benefit from .green-text[data-rich]
 
 ---
 
@@ -715,7 +715,7 @@ for(i in 1:3) {
 
 ## .blue-text.under[State model]
 
-## .blue-text[Trends]<sub><i>t</i></sub> = .blue-text[Trends]<sub><i>t</i>-1</sub> + .gray-text[error]<sub><i>t</i></sub>
+## .blue-text[Trends]<sub><i>t</i></sub> = .blue-text[Trends]<sub><i>t</i>-1</sub> + .gray-text[errors]<sub><i>t</i></sub>
 
 ---
 
@@ -723,11 +723,11 @@ for(i in 1:3) {
 
 ## .blue-text.under[State model]
 
-## .blue-text[Trends]<sub><i>t</i></sub> = .blue-text[Trends]<sub><i>t</i>-1</sub> + .gray-text[error]<sub><i>t</i></sub>
+## .blue-text[Trends]<sub><i>t</i></sub> = .blue-text[Trends]<sub><i>t</i>-1</sub> + .gray-text[errors]<sub><i>t</i></sub>
 
 ## .purple-text.under[Observation model]
 
-## .purple-text[Data]<sub><i>t</i></sub> = .orange-text[Loadings] × .blue-text[Trends]<sub><i>t</i></sub> + .red-text[error]<sub><i>t</i></sub>
+## .purple-text[Data]<sub><i>t</i></sub> = .orange-text[Loadings] × .blue-text[Trends]<sub><i>t</i></sub> + .red-text[errors]<sub><i>t</i></sub>
 
 .citationT.gray-text[Zuur et al. (2003) *Environmetrics* 14:665–685] 
 
@@ -795,11 +795,11 @@ background-size: 65%
 
 ## .blue-text.under[State model]
 
-## .blue-text[Trends]<sub><i>t</i></sub> = .blue-text[Trends]<sub><i>t</i>-1</sub> + .gray-text[error]<sub><i>t</i></sub>
+## .blue-text[Trends]<sub><i>t</i></sub> = .blue-text[Trends]<sub><i>t</i>-1</sub> + .gray-text[errors]<sub><i>t</i></sub>
 
 ## .purple-text.under[Observation model]
 
-## .purple-text[Data]<sub><i>t</i></sub> = .orange-text[Loadings] × .blue-text[Trends]<sub><i>t</i></sub> + .under[Predictors]<sub><i>t</i></sub> + .red-text[error]<sub><i>t</i></sub>
+## .purple-text[Data]<sub><i>t</i></sub> = .orange-text[Loadings] × .blue-text[Trends]<sub><i>t</i></sub> + .under[Predictors]<sub><i>t</i></sub> + .red-text[errors]<sub><i>t</i></sub>
 
 
 ---
@@ -844,7 +844,7 @@ background-size: 97%
 
 ## .purple-text.under[Observation model]
 
-## .purple-text[Data]<sub><i>i</i></sub> = .orange-text[Loadings] × .blue-text[Spatial maps]<sub><i>i</i></sub> + .red-text[error]<sub><i>i</i></sub>
+## .purple-text[Data]<sub><i>i</i></sub> = .orange-text[Loadings] × .blue-text[Spatial maps]<sub><i>i</i></sub> + .red-text[errors]<sub><i>i</i></sub>
 
 .citationT.gray-text[Thorson et al. (2015) *Meth* *Ecol* & *Evol* 6:627–637]
 
@@ -868,10 +868,19 @@ background-size: 75%
 
 ---
 
+class: inverse, center, middle
+
 # Conservation of Pacific salmon
 
-.blue-text[
-## More than one-half of the stocks in the lower 48 are listed under the Endangered Species Act
+---
+
+class: middle
+
+.red-text[
+## More than one-half of stocks in the lower 48
+]
+.red-text.right[
+## are listed under the Endangered Species Act
 ]
 
 ---
@@ -1063,11 +1072,11 @@ text(tstar,par()$usr[3]-aB, "T",
 
 ## .blue-text.under[State model]
 
-## .blue-text[Density]<sub><i>t</i></sub> = .blue-text[Density]<sub><i>t</i>-1</sub> + .orange-text[Supplementation]<sub><i>t</i></sub> + .gray-text[error]<sub><i>t</i></sub>
+## .blue-text[Density]<sub><i>t</i></sub> = .blue-text[Density]<sub><i>t</i>-1</sub> + .orange-text[Supplementation]<sub><i>t</i></sub> + .gray-text[errors]<sub><i>t</i></sub>
 
 ## .purple-text.under[Observation model]
 
-## .purple-text[Data]<sub><i>t</i></sub> = .blue-text[Density]<sub><i>t</i></sub> + .red-text[error]<sub><i>t</i></sub>
+## .purple-text[Data]<sub><i>t</i></sub> = .blue-text[Density]<sub><i>t</i></sub> + .red-text[errors]<sub><i>t</i></sub>
 
 ---
 
@@ -1262,11 +1271,11 @@ MN map: *Chandler O’Leary (2013)*
 WI map: *Cat's Meow Village*  
 LIDAR: *NOAA*  
 DNA: *fizzgig (2016)*  
-Janet Leigh: *Paramount Studios*  
+Robin Hood: *John Escott*  
+M Caulkin: *20th Century Fox*  
 Carnival: *Frank Kovalchek (2010)*   
 Snake oil: *The Register*  
 Shakespeare's plays: *Sir John Gilbert (1849)*  
-Robin Hood: *John Escott*  
 Budweiser: *Anheiser-Busch*  
 DWH: *US Coast Guard*  
 ]
